# GapHarness

./: .gitignore  ARTIFACTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml  raw_plan.md
benchmarks/: gaia_obligation_subset_test20.jsonl  gaia_obligation_subset_validation20.jsonl  gaia_test_100_human_audited.jsonl  gaia_transfer_200_human_audited.jsonl  gaia_validation_100_for_review.jsonl  gapbench_500_for_review.jsonl  gapbench_factorial_seed.jsonl  gapbench_failed_gpt54mini_norm.jsonl
docs/: PUBLICATION_PLAN.md  annotation_codebook.md  experiment_log.md  paper_claims_and_boundaries.md  phase2_status_zh.md  phase2b_status_zh.md  phase2c_status_zh.md  phase2d_stress_tests_zh.md  project_notes_zh.md  reproducibility.md  technical_report_draft.md
gaia_transfer_human_audited_package/: README.md  audit_log.md  gaia_transfer_200_human_audited.jsonl  gaia_transfer_human_audited_manifest.json
gaia_transfer_review_package/: GAIA_TRANSFER_REVIEW_README.md  gaia_test_100_for_review.jsonl  gaia_test_100_review_sheet.csv  gaia_transfer_review_manifest.json  gaia_validation_100_for_review.jsonl  gaia_validation_100_review_sheet.csv
gapbench_expansion_review_package/: GAPBENCH_EXPANSION_README.md  gapbench_1000_for_review.jsonl  gapbench_1000_review_sheet.csv  gapbench_500_for_review.jsonl  gapbench_500_review_sheet.csv  gapbench_expansion_manifest.json
gapharness/: __init__.py  baselines.py  cli.py  compiler.py  dominance_registry.py  evaluation.py  executor.py  independent_oracle.py  llm_client.py  llm_profiler.py  profiler.py  registry.py  schema.py  seed_data.py  verifiers.py
outputs/: paper_mvp_results.md  results_consensus_gpt55_failures.jsonl  results_gaia_test100_review_gold.jsonl  (+27 more)
(+1183 files in other folders)
